@@ -13,7 +13,7 @@ use Moose;
 use Method::Signatures;
 use MooseX::Types::Path::Tiny qw(Path);
 use MooseX::Types::URI qw(Uri);
-use LWP::UserAgent;
+use LWP::UserAgent::Determined;
 use MIME::Base64;
 use Mozilla::CA;
 use Path::Tiny;
@@ -140,11 +140,12 @@ has _ua_module_version => (
 );
 
 method _build_ua () {
-    return LWP::UserAgent->new(
+    return LWP::UserAgent::Determined->new(
         agent      => $self->_ua_module_version . ' ',
         cookie_jar => {},
         ssl_opts   => { verify_hostname => $self->ssl_verify, SSL_ca_file => $self->ssl_ca_file },
-        timeout    => $self->timeout
+        timeout    => $self->timeout,
+        env_proxy  => 1,
     );
 }
 
